fix tabs overlays with container on mobile

--- a/css/index.styl
+++ b/css/index.styl
@@ -908,6 +908,15 @@ tabsHeight = 40px
       .auth0-lock-form p
         @media screen and (max-width: 480px)
           font-size 14px
+    
+    .auth0-lock-tabs-container
+      //mobile view
+      @media screen and (max-width: 480px)
+        position absolute
+        top 0
+        left 0
+        width 100%
+        margin 0
 
 
     .auth0-lock-terms
@@ -1035,14 +1044,6 @@ tabsHeight = 40px
   .auth0-lock-tabs-container
     margin -20px -20px 20px
     height tabsHeight
-
-    //mobile view
-    @media screen and (max-width: 480px)
-      position absolute
-      top 0
-      left 0
-      width 100%
-      margin 0
 
   .auth0-lock-tabs
     background white
